[package]
name = "icg"
version = "0.1.0"
authors = ["Nick Hamann <nick@wabbo.org>"]

[dependencies]
cgmath = "*"
glium = "*"
rand = "0.3"

[[bin]]
name = "glium_triangle"
path = "src/main_glium.rs"

[[bin]]
name = "icg_sierpinski_points"
path = "src/sierpinski_points.rs"

[[bin]]
name = "icg_sierpinski_triangles"
path = "src/sierpinski_triangles.rs"

[[bin]]
name = "icg_sierpinski_3d_points"
path = "src/sierpinski_3d_points.rs"
